added routes for trails get, post and getbyid
