# src/routes/trails.routes.ts
@@ -4,4 +4,10 @@ const router = Router();
 
 router.get("/trails", Controllers.getTrails);
 
+router.post("/trails", Controllers.postTrail);
+
+router.get("/trailCount", Controllers.getTrailCount);
+
+router.get("/trails/:id", Controllers.getTrailById);
+
 export default router;
